--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
             /><br /><br /><br />
             <input type="submit" value="Register" id="submit" />
 
-            <p>if already registered.</p>
-            <a href="./login.html" class="login-link">Login here</a>
+            <p>if already registered?</p>
+            <a href="./login.html" class="login-link" style="font-size: 27px; text-decoration: none;">Login Here</a><br><br>
+            <a href="./quotes.html" class="login-link" style="font-size: 27px; text-decoration: none;">Skip Registration</a>
           </form>
         </center>
 
